# techchallenge

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: main.py
src/models/: schemas.py
src/scraper/: browser.py  scraper.py
src/services/: telegram_captcha.py
