[project]
name = "techchallenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "pytest>=9.0.2",
    "pytest-playwright>=0.7.2",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.41.0",
]
